--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,11 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files":[
+            "App/Services/InvoiceService.php",
+            "App/Services/ZipperService.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
